2019-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm.jitter: Update comments to reflect that peek/poke
	instructions get bit-offsets, not regular offsets.

2019-11-24 John Darrington <john@darrington.wattle.id.au>
            * src/pk-file (pk_file_readable): New function.
            (pk_cmd_load_file): Use it to check files before
            opening.

2019-11-24 John Darrington <john@darrington.wattle.id.au>

	* src/pk-term.c: Remove unnecessary #include <sys/stat.h>

2019-11-28  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke-dg.exp (dg-data): Avoid appending duplicated
	file names to poke_data_files.
	(poke_finish): Fix deleting the temporary files.

2019-11-28  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm.jitter: Add ios_write_string to the list of wrapped
	functions.
	(pokes): Implement instruction.
	* src/ios.c (ios_write_string): Implement.
	* testsuite/poke.map/ass-map-3.pk: New test.
	* testsuite/poke.map/ass-map-4.pk: Likewise.
	* testsuite/poke.map/ass-map-5.pk: Likewise.

2019-11-28  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-anal.c (pkl_anal1_ps_return_stmt): New handler.
	(pkl_phase_anal1): Register it.
	* testsuite/poke.pkl/return-diag-2.pk: New test.

2019-11-28  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_type_offset): New handler.
	(pkl_phase_typify1): Register it.
	* testsuite/poke.pkl/offset-type-diag-1.pk: New test.
	* testsuite/poke.pkl/offset-type-diag-2.pk: Likewise.

2019-11-24 John Darrington <john@darrington.wattle.id.au>

        * src/std.pk (crc32): New function.
        * doc/poke.texi (CRC Functions): New node.

2019-11-27  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm.jitter (quake): New instruction.
	(rot-swap-to-quake): New rewrite rule.

2019-11-24 John Darrington <john@darrington.wattle.id.au>

	* src/pk-cmd.c (pk_cmd_exec_script): Use getline instead
	of a loop and getc.

2019-11-26  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm-alloc.c (pvm_realloc): New function.