@@ -945,7 +945,7 @@ instruction over () # ( A B -- A B A )
   end
 end
 
-instruction quake () #  ( A B -- B A B )
+instruction quake () #  ( A B C -- B A C )
   code
     JITTER_QUAKE_STACK ();
   end
@@ -2771,8 +2771,3 @@ into
   drop4
 end
 
-rule rot-swap-to-quake rewrite
-  rot; swap
-into
-  quake
-end
